[gd_scene load_steps=8 format=3 uid="uid://cjcwj2co4fkg1"]

[ext_resource type="Script" path="res://addons/DialogHelperTool/Shared/Dropdownbox/Dropdownbox.gd" id="1_6g2kw"]
[ext_resource type="Shader" path="res://addons/DialogHelperTool/Shared/Dropdownbox/Dropdownbox.gdshader" id="2_0fie5"]
[ext_resource type="Texture2D" uid="uid://xjw8dk2asvme" path="res://addons/DialogHelperTool/Res/down-chevron.png" id="2_qikic"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dru2x"]
bg_color = Color(0, 0, 0, 0.345098)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0.188235, 0.937255)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmxdn"]
content_margin_bottom = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gj3qv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w78vn"]
shader = ExtResource("2_0fie5")
shader_parameter/is_active = true

[node name="Dropdownbox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_6g2kw")
inactive_color = Color(0.329412, 0.337255, 0.380392, 0.941176)
items = Array[String](["hehE", "hoho", "huhu", "hEhesh", "Helga", "lgahe"])

[node name="OptionButton" type="OptionButton" parent="."]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 6
theme_override_styles/normal = SubResource("StyleBoxFlat_dru2x")
item_count = 6
selected = 0
fit_to_longest_item = false
popup/item_0/text = "hehE"
popup/item_0/id = 0
popup/item_1/text = "hoho"
popup/item_1/id = 1
popup/item_2/text = "huhu"
popup/item_2/id = 2
popup/item_3/text = "hEhesh"
popup/item_3/id = 3
popup/item_4/text = "Helga"
popup/item_4/id = 4
popup/item_5/text = "lgahe"
popup/item_5/id = 5

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_qmxdn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gj3qv")
alignment = 1
flat = true

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_w78vn")
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -4.0
offset_right = -4.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_qikic")
expand_mode = 1
stretch_mode = 5

[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="gui_input" from="LineEdit" to="." method="_on_line_edit_gui_input"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
